k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuzi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  rules:
  - host: demo.zuzi.art
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: api
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: api
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http
            port:
              name: http
  tls:
    - hosts: 
      - demo.zuzi.art
      secretName: demo-zuzi-art-cert
